--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
+    "@angular/forms": "^18.2.12",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "json-server": "^1.0.0-beta.3",
+    "postcss": "^8.4.49",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.15",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
